--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 		border-radius: 5px;
 		width: 100px;
 		background: rgba(120, 63, 235, 0.2);
-		font-family: Bahnschrift Condensed;
 		display: inline-block;
 		padding: 5px 65px;
 		text-align: center;
-		margin-left: 20px;
 		margin-top: 5px;
 		margin-bottom: 5px;
 	}
@@ -40,21 +38,20 @@
 	body{
 		background-color: black;
 		background: black;
+		font-family: Bahnschrift Condensed;
 	}
 	.text{
 		color: white;
-		font-family: Bahnschrift Condensed;
 		margin-left: 25px;
 	}
 	.text1{
-    	color: white;
-		font-family: Bahnschrift Condensed;
+    		color: white;
 		margin-left: 20px;
-    	border-left-style: solid;
-    	border-color: rgb(120, 63, 235);
-    	padding-left: 10px;
-    	background-color: rgba(120, 63, 235, 0.3);
-    	width: 200px;
+    		border-left-style: solid;
+    		border-color: rgb(120, 63, 235);
+    		padding-left: 10px;
+    		background-color: rgba(120, 63, 235, 0.3);
+    		width: 200px;
 	}
 </style>
 
@@ -68,7 +65,7 @@
 <table>
 	<tr>
 		<th>
-            <a href="file:///C:/Users/Olha%20Orlova/Desktop/SporeIndustries/pgSIUA.html"><img src="image_2023-12-09_21-30-10.png" class="img1" align="left" height="45%"width="45%"></a>
+            <a href="https://ultrafarmer35.github.io/SporeIndustries/"><img src="image_2023-12-09_21-30-10.png" class="img1" align="left" height="45%"width="45%"></a>
 	    </th>
 		
 		<th class="th1" align="centre">
