--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		text-align: center;
 		margin-top: 5px;
 		margin-bottom: 5px;
+		margin-right: 10px;
 	}
      .a:hover,.a active {
         color: rgb(130, 73, 245);
