--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 		border-radius: 5px;
 		width: 100px;
 		background: rgba(120, 63, 235, 0.2);
+		font-family: Bahnschrift Condensed;
 		display: inline-block;
 		padding: 5px 65px;
 		text-align: center;
+		margin-left: 20px;
 		margin-top: 5px;
 		margin-bottom: 5px;
 	}
@@ -38,20 +40,21 @@
 	body{
 		background-color: black;
 		background: black;
-		font-family: Bahnschrift Condensed;
 	}
 	.text{
 		color: white;
+		font-family: Bahnschrift Condensed;
 		margin-left: 25px;
 	}
 	.text1{
-    		color: white;
+    	color: white;
+		font-family: Bahnschrift Condensed;
 		margin-left: 20px;
-    		border-left-style: solid;
-    		border-color: rgb(120, 63, 235);
-    		padding-left: 10px;
-    		background-color: rgba(120, 63, 235, 0.3);
-    		width: 200px;
+    	border-left-style: solid;
+    	border-color: rgb(120, 63, 235);
+    	padding-left: 10px;
+    	background-color: rgba(120, 63, 235, 0.3);
+    	width: 200px;
 	}
 </style>
 
