--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
+<!DOCTYPE html>
+<htmml lang = "ua">
+<head>
+<title>SporeIndustries.com</title>
 
+<style type="text/css">
+	 .a:link,.a visited{
+		color: white;
+		text-decoration: none;
+		border: 5px solid rgb(120, 63, 235);
+		border-radius: 5px;
+		width: 120px;
+		background: rgba(120, 63, 235, 0.2);
+		font-family: Bahnschrift Condensed;
+		display: inline-block;
+		padding: 5px 65px;
+		text-align: center;
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
+     .a:hover,.a active {
+        color: rgb(130, 73, 245);
+  	    text-decoration: underline;
+	}
+	table{
+      background-color: black;
+      width: 1520px;
+      border: 4px solid rgba(120, 63, 235, 0.5);
+      border-spacing: 20px;
+      border-radius: 5px;
+    }
+	.th1{
+
+	}
+	.img1{
+	    border: 0px solid black;
+	    margin-left: 0px;
+	}
+	body{
+		background-color: black;
+		background: black;
+	}
+	.text{
+		color: white;
+		font-family: Bahnschrift Condensed;
+		margin-left: 25px;
+	}
+	.text1{
+    	color: white;
+		font-family: Bahnschrift Condensed;
+		margin-left: 20px;
+    	border-left-style: solid;
+    	border-color: rgb(120, 63, 235);
+    	padding-left: 10px;
+    	background-color: rgba(120, 63, 235, 0.3);
+    	width: 200px;
+	}
+</style>
+
+<script type="text/javascript">
+	
+</script>
+
+</head>
+<body>
+
+<table>
+	<tr>
+		<th>
+            <a href="file:///C:/Users/Olha%20Orlova/Desktop/SporeIndustries/pgSIUA.html"><img src="image_2023-12-09_21-30-10.png" class="img1" align="left" height="45%"width="45%"></a>
+	    </th>
+		
+		<th class="th1" align="centre">
+			<a href="#au" title="інформація про нас" class="a"><h1>про нас</h1></a>
+		</th>
+
+		<th>
+		</th>
+		
+		<th class="th1" align="centre">
+			<a href="#pos" title="види послуг які ми можем вам надати" class="a"><h1>послуги</h1></a>
+		</th>
+
+		<th>
+		</th>
+		
+		<th class="th1" align="centre">
+			<a href="#c" title="наші контактні дані" class="a"><h1>контакти</h1></a>
+		</th>
+
+		<th>
+		</th>
+		<th>
+		</th>
+		<th>
+		</th>
+		<th>
+		</th>
+		<th>
+		</th>
+		<th>
+		</th>
+		<th>
+		</th>
+		<th>
+		</th>
+	</tr>
+</table>
+<h1 class="text1" id="au">Про нас</h1>
+
+<h1 class="text1" id="pos">Послуги</h1>
+
+<h1 class="text1" id="c">Контакти</h1>
+<h3 class="text">телефон: +380 95 240 50 54</h3>
+<h3 class="text">пошта: idei.ua.pidtrimka@gmail.com</h3>
+</body>
+</html>
