--- a/index.html
+++ b/index.html
@@ -107,11 +107,21 @@
 	</tr>
 </table>
 <h1 class="text1" id="au">Про нас</h1>
+    <h3 class="text">Ми нова компанія в агрономічній сфері, оскільки ми тільки почали у нас не так багато досвіду,знань,послуг.</h3>
+    <h3 class="text">Наразі у нас доступна лише 1 послуга, зате не дорога,радимо замовити.</h3>
+    <h3 class="text">Якщо у вас є ідеї,поради, чи питання звертайтеся на нашу пошту яка зазначе трохи нижче, дякую.</h3>
+    <h3 class="text">Усі послуги замовляйте через пошту!</h3>
 
 <h1 class="text1" id="pos">Послуги</h1>
+	<h2 class="text">Аналіз ґрунту</h2>
+	<h2 class="text">Що в себе включає аналіз ґрунту?</h2>
+	<h3 class="text">1 Рівень Ph (кислотності)</h3>
+	<h3 class="text">2 Вологість (приблизна у мл/г чи кг)</h3>
+	<h3 class="text">3 Тип ґрунту (встановлення типу ґрунту)</h3>
+	<h2 class="text">Ціна: 25 грн.</h2>
 
 <h1 class="text1" id="c">Контакти</h1>
-<h3 class="text">телефон: +380 95 240 50 54</h3>
-<h3 class="text">пошта: idei.ua.pidtrimka@gmail.com</h3>
+    <h3 class="text">телефон: поки що нема :(</h3>
+    <h3 class="text">пошта: idei.ua.pidtrimka@gmail.com</h3>
 </body>
 </html>
