--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <h3 class="text">Наразі у нас доступна лише 1 послуга, зате не дорога,радимо замовити.</h3>
     <h3 class="text">Якщо у вас є ідеї,поради, чи питання звертайтеся на нашу пошту яка зазначе трохи нижче, дякую.</h3>
     <h3 class="text">Усі послуги замовляйте через пошту!</h3>
+    <h3 class="text">Цей сайт був розроблений для комп'ютерів та ноутбуків, на інших пристроях сайт може відображатися некоректно!</h3>
 
 <h1 class="text1" id="pos">Послуги</h1>
 	<h2 class="text">Аналіз ґрунту</h2>
