--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
 <h1 class="text1" id="au">Про нас</h1>
     <h3 class="text">Ми нова компанія в агрономічній сфері, оскільки ми тільки почали у нас не так багато досвіду,знань,послуг.</h3>
     <h3 class="text">Наразі у нас доступна лише 1 послуга, зате не дорога,радимо замовити.</h3>
-    <h3 class="text">Ми попонуємо послуги та товари у різних напрямках</h3>
+    <h3 class="text">Ми попонуємо послуги та товари у різних напрямках(поки не так багато).</h3>
     <h3 class="text">Якщо у вас є ідеї,поради, чи питання звертайтеся на нашу пошту яка зазначе трохи нижче, дякую.</h3>
+    <h2 class="text">Важлива інформація</h2>
     <h3 class="text">Усі послуги замовляйте через пошту!</h3>
     <h3 class="text">Цей сайт був розроблений для комп'ютерів та ноутбуків, на інших пристроях сайт може відображатися некоректно!</h3>
 
