--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <h3 class="text">Ми попонуємо послуги та товари у різних напрямках(поки не так багато).</h3>
     <h3 class="text">Якщо у вас є ідеї,поради, чи питання звертайтеся на нашу пошту яка зазначе трохи нижче, дякую.</h3>
     <h2 class="text">Важлива інформація</h2>
-    <h3 class="text">Усі послуги замовляйте через пошту!</h3>
+    <h3 class="text">Усі послуги замовляйте через пошту! Відгуки таож пишіть на пошту!</h3>
     <h3 class="text">Цей сайт був розроблений для комп'ютерів та ноутбуків, на інших пристроях сайт може відображатися некоректно!</h3>
 
 <h1 class="text1" id="pos">Послуги</h1>
@@ -126,5 +126,8 @@
 <h1 class="text1" id="c">Контакти</h1>
     <h3 class="text">телефон: поки що нема :(</h3>
     <h3 class="text">пошта: idei.ua.pidtrimka@gmail.com</h3>
+
+<h1 class="text1">Відгуки</h1>
+    <h3 class="text">поки що нема :(</h3>
 </body>
 </html>
