--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
 	<section class="tovary">
 		<p class="text">Культиватор для насіння</p>
 		<p class="text">1 розсіювальний світлодіод<br>
+						об'єм 120 мл<br>
 						система вентиляції<br>
 						живлення 3v</p>
 		<p class="text">Ціна: 40 грн.</p>
@@ -351,8 +352,8 @@
 
     <section class="tovary">
 		<p class="text">Культиватор для насіння 2.0</p>
-		<p class="text">1 розсіювальний ультрафіолетовий світлодіод<br>
-						збільшений розмір<br>
+		<p class="text">1 розсіювальний блакитний світлодіод<br>
+						об'єм 120 мл<br>
 						ізоляція дротів<br>
 						система вентиляції<br>
 						живлення 3v</p>
@@ -368,38 +369,6 @@
 		<p class="text">Ціна: 45 грн.</p>
     </section>
 
-<h2 class="text1" id="vak">Вкансії</h2>
-	<section class="tovary">
-		<p class="text">Біо-інженер</p>
-		<p class="text">ЗП: 15000 грн.<br>
-						Досвід роботи: 5 роки</p>
-	</section>
-
-	<section class="tovary">
-		<p class="text">Інженер</p>
-		<p class="text">ЗП: 12000 грн.<br>
-						Досвід роботи: 4 роки</p>
-	</section>
-
-	<section class="tovary">
-		<p class="text">Пррграміст</p>
-		<p class="text">ЗП: 10000 грн.<br>
-						Досвід роботи: 3 роки</p>
-	</section>
-
-	<section class="tovary">
-		<p class="text">Менеджер з маркетингу</p>
-		<p class="text">ЗП: 9000 грн.<br>
-						Досвід роботи: 4 роки</p>
-	</section>
-
-	<section class="tovary">
-		<p class="text">Кур'єр</p>
-		<p class="text">ЗП: 6000 грн.<br>
-						Досвід роботи: 1 рік</p>
-	</section>
-
-</section>
 </main>
 
 
