--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <section class="">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5806.566602160957!2d30.492544694567012!3d50.52194704280025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1suk!2sua!4v1718216116441!5m2!1suk!2sua" width="320" height="250"class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></section>
     <section class="">
-		<a href="#" class="fa fa-telegram"></a>
+		<a href="t.me/Spore_Industries" class="fa fa-telegram"></a>
 		<a href="#" class="fa fa-google"></a>
 		<a href="#" class="fa fa-github"></a>
 		<a href="#" class="fa fa-youtube"></a>
