--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 	</a>	
 
 <div class="dropdown">
-	<a href="tov"><button class="button-85" role="button" title="Наші пропозиції"><h3>пропозиції</h3></button></a>
+	<a href="#tov"><button class="button-85" role="button" title="Наші пропозиції"><h3>пропозиції</h3></button></a>
     <div class="dropdown-content">
 	  <a href="#tov" class="text11">Товари</a>
       <a href="#pos" class="text11">Послуги</a>
