--- a/tovar1.html
+++ b/tovar1.html
@@ -29,24 +29,44 @@
 </header>
 <main>
 	<h1 class="textov1">Культиватор для насіння</h1>
+		<h2 class="text1">Опис:</h2> 
+			<p class="text">У культиваторі, ви можете швидше та ефективніше проростити, та виростити насіння, або маленький паросток.<br>
+			    		    Також, за допомогою культиватора набагато легше,ефективніше та цікавіше проводити різні досліди над рослиною.</p>
+			<p class="text">В наявності</p>	
+			<p class="text">Ціна: 40 грн.</p>	
+		<h2 class="text1">Склад:</h2>
+			<p class="text">
+				1 розсіювальний світлодіод<br>
+				Система міні вентиляції<br>
+				Два дроти з контактами<br>
+				Пластикова кришка<br>
+				Контейнер<br>
+				Інструкція<br>
+				(БАТАРЕЙНИЙ БЛОК, В КОМПЛЕКТ НЕ ВХОДИТЬ!!!)</p>
+		<h2 class="text1">Інструкція:</h2>
+			<p class="text">1.Відкритість кришку культиватора<br>
+				2.Дістаньте інструкцію, та уважно ознайомитесь з нею<br>
+				3.Відберіть окремо одну насінину і відкладіть її окремо<br>
+				4.Утрамбуйте 10-30 мл землі у культиватор(на важ розсуд)<br>
+				5.Додайте трішки води та посадіть насінину<br>
+				6.Закрутіть кришку культиватора, та доглядайте за рослиною<br>
+				7.Коли у вас буде паросток, або коли захочете вийміть рослину разом з землею, та посадіть її<br>
+				8.Залиште гарний відгук</p>
+
 		<table class="i1">
 			<tr>
 				<th>
 					<img src="KyltivatorDlaNasinia.jpg" height="500" width="400px" class="img1">
 					<img src="KyltivatorDlaNasinia01.jpg" height="500" width="400" class="img1">
-				</th>
-				<th>
-					<p class="textov">текст1</p>
 				</th>			
+					
 			</tr>
 			<tr>
 				<th>
 					<img src="KyltivatorDlaNasinia03.jpg" height="500" width="400" class="img1">
 					<img src="KyltivatorDlaNasinia04.jpg" height="500" width="400" class="img1">
 				</th>
-				<th>
-					<p class="textov">текст2</p>
-				</th>
+					
 			</tr>
 		</table>
 </main>
