--- a/index.html
+++ b/index.html
@@ -224,25 +224,25 @@
 	
     <a href="index.html" title="наш логотип"><img src="image_2023-12-09_21-30-10.png" class="img2"align="left" height="13%" width="13%" ></a>
 
-	<a href="#mroboty" title="інформація про нас"><button class="button-85" role="button"><h3>мої роботи</h3></button>
+	<a href="#mroboty" title="Роботи які я зробив, до створення сайту"><button class="button-85" role="button"><h3>мої роботи</h3></button>
 	</a>	
 
 <div class="dropdown">
-	<a href="#tov"><button class="button-85" role="button" title="Наші пропозиції"><h3>пропозиції</h3></button></a>
+	<a href="#pos"><button class="button-85" role="button" title="наші пропозиції для вас"><h3>пропозиції</h3></button></a>
     <div class="dropdown-content">
-	  <a href="#tov" class="text11">Товари</a>
-      <a href="#pos" class="text11">Послуги</a>
-      <a href="#akc" class="text11 banb">Акції</a>
-      <a href="#vak" class="text11 banb">Вакансії</a>
+	  <a href="#tov" class="text11" title="наші товари, які ми можемо вам запропонувати">Товари</a>
+      <a href="#pos" class="text11" title="наші послуги, які ми можемо вам запропонувати">Послуги</a>
+      <a href="#akc" class="text11 banb" title="покищо недоступно">Акції</a>
+      <a href="#vak" class="text11 banb" title="покищо недоступно">Вакансії</a>
     </div>
 </div> 
 	
 <div class="dropdown">	
 	<a href="#contacts"><button class="button-85" role="button" title="наші контактні дані"><h3>контакти</h3></button></a>
 	<div class="dropdown-content">
-		<a href="#poshta" class="text11">Пошта</a>
-		<a href="#telephone" class="text11">Телефон</a>
-		<a href="#rostashyvania" class="text11">Розташування</a>
+		<a href="#poshta" class="text11" title="наша пошта">Пошта</a>
+		<a href="#telephone" class="text11" title="наш телефон">Телефон</a>
+		<a href="#rostashyvania" class="text11" title="наше розташування">Розташування</a>
 	</div>
 </div>
 
@@ -314,7 +314,7 @@
 			    	<p class="text">форма: міні-баночка<br>
 			    					культури: мох<br>
 			    				    колір: зелений</p>
-			    	<p class="text">Ціна: 20 грн.</p>
+			    	<p class="text">Ціна: 15 грн.</p>
 			    	<a href="tovar4.html"><p class="textz">дізнатись більше</p></a> 
 			    </section>
 			</th>		    
@@ -325,9 +325,31 @@
 								    тривалість ефекту 1-∞ хв<br>
 									колір: ???</p>
 					<p class="text">Ціна: 20 грн.</p>
-					<a href="indexzilia.html"><p class="textz" title="гатисніть щоб побачити повний список ефектів">можливі ефекти:</p></a>
+					<a href="tovar5.html"><p class="textz">дізнатись більше</p></a>
 		    	</section>
 		    </th>		
+		</tr>
+		<tr>
+			<th>
+				<section>					
+				</section>
+			</th>
+			<th>
+				<section>					
+				</section>
+			</th>
+			<th>
+				<section>					
+				</section>
+			</th>
+			<th>
+				<section>					
+				</section>
+			</th>
+			<th>
+				<section>					
+				</section>
+			</th>
 		</tr>
 	</table>
 
