--- a/tovar1.html
+++ b/tovar1.html
@@ -44,7 +44,8 @@
 				Інструкція<br>
 				(БАТАРЕЙНИЙ БЛОК, В КОМПЛЕКТ НЕ ВХОДИТЬ!!!)</p>
 		<h2 class="text1">Інструкція:</h2>
-			<p class="text">1.Відкритість кришку культиватора<br>
+			<p class="text">
+				1.Відкритість кришку культиватора<br>
 				2.Дістаньте інструкцію, та уважно ознайомитесь з нею<br>
 				3.Відберіть окремо одну насінину і відкладіть її окремо<br>
 				4.Утрамбуйте 10-30 мл землі у культиватор(на важ розсуд)<br>
@@ -56,16 +57,16 @@
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia.jpg" height="500" width="400px" class="img1">
-					<img src="KyltivatorDlaNasinia01.jpg" height="500" width="400" class="img1">
+					<img src="KyltivatorDlaNasinia.jpg" height="500" width="400px" class="img1" title="культиватор для насіння">
+					<img src="KyltivatorDlaNasinia01.jpg" height="500" width="400" class="img1" title="культиватор для насіння">
 				</th>			
 					
 			</tr>
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia03.jpg" height="500" width="400" class="img1">
-					<img src="KyltivatorDlaNasinia04.jpg" height="500" width="400" class="img1">
-				</th>
+					<img src="KyltivatorDlaNasinia03.jpg" height="500" width="400" class="img1" title="культиватор для насіння">
+					<img src="KyltivatorDlaNasinia04.jpg" height="500" width="400" class="img1" title="культиватор для насіння">
+				</th> 
 					
 			</tr>
 		</table>
