--- a/tovar2.html
+++ b/tovar2.html
@@ -29,24 +29,25 @@
 </header>
 <main>
 	<h1 class="textov1">Батарейний блок 3V</h1>
+		<h2 class="text1">Опси:</h2>
+			<p class="text">За допомогою батарейного блоку ви зможете увікнутии світолодіод, та ввімкнути багато інших наших майбутнвх ідей.</p>
+			<p class="text">В наявності</p>	
+			<p class="text">Ціна: 23 грн.</p>
+		<h2 class="text1">Склад:</h2>
+			<p class="text">
+				Батарейний блок<br>
+				2 дроти<br></p>
+		<h2 class="text1">Інструкція:</h2>
+			<p class="text">
+				1.Вставте дві батарейки по 1.5V<br>
+				2.Підкулючіть блок до потрібного приладу<br>
+				3.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia.jpg" height="500" width="400px" class="img1">
-					<img src="KyltivatorDlaNasinia01.jpg" height="500" width="400" class="img1">
-				</th>
-				<th>
-					<p class="textov">dsffj</p>
+					<img src="BatareinuiBlok.jpg" height="500" width="400" class="img1" title="батарейний блок">
+					<img src="BatareinuiBlok01.jpg" height="500" width="400" class="img1" title="батарейний блок">
 				</th>			
-			</tr>
-			<tr>
-				<th>
-					<img src="KyltivatorDlaNasinia03.jpg" height="500" width="400" class="img1">
-					<img src="KyltivatorDlaNasinia04.jpg" height="500" width="400" class="img1">
-				</th>
-				<th>
-					<p class="textov"></p>
-				</th>
 			</tr>
 		</table>
 </main>
