--- a/tovar3.html
+++ b/tovar3.html
@@ -29,23 +29,31 @@
 </header>
 <main>
 	<h1 class="textov1">Мохіум</h1>
+		<h2 class="text1">Опси:</h2>
+			<p class="text">Поки що це просто кругла пластина, з якою ви можете щось зробити.</p>
+			<p class="text">нема в наявності</p>	
+			<p class="text">Ціна: 15 грн.</p>
+		<h2 class="text1">Склад:</h2>
+			<p class="text">
+				Мох<br>
+				Органічний клей</p>
+		<h2 class="text1">Інструкція:</h2>
+			<p class="text">
+				1.Робіть з цим що хочете<br>
+				2.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia.jpg" height="500" width="400px" class="img1">
-					<img src="KyltivatorDlaNasinia01.jpg" height="500" width="400" class="img1">
+					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="" height="500" width="400" class="img1" title="мохіум">
 				</th>
 				<th>
-					<p class="textov">dsffj</p>
 				</th>			
 			</tr>
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia03.jpg" height="500" width="400" class="img1">
-					<img src="KyltivatorDlaNasinia04.jpg" height="500" width="400" class="img1">
-				</th>
-				<th>
-					<p class="textov"></p>
+					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="" height="500" width="400" class="img1" title="мохіум">
 				</th>
 			</tr>
 		</table>
