--- a/tovar4.html
+++ b/tovar4.html
@@ -28,24 +28,31 @@
 	</nav>
 </header>
 <main>
-	<h1 class="textov1">Мікро-світ</h1>
+	<h1 class="textov1">Макро-світ</h1>
+		<h2 class="text1">Опси:</h2>
+			<p class="text">Ваш власний макро-світ з власною макро-екосистемою. Просто гарна та красива річ.</p>
+			<p class="text">нема в наявності</p>	
+			<p class="text">Ціна: 15 грн.</p>
+		<h2 class="text1">Склад:</h2>
+			<p class="text">1 баночка</p>
+		<h2 class="text1">Інструкція:</h2>
+			<p class="text">
+				1.Поставте у тінь, напівтінь<br>
+				2.НЕ відкривайте<br>
+				3.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia.jpg" height="500" width="400px" class="img1">
-					<img src="KyltivatorDlaNasinia01.jpg" height="500" width="400" class="img1">
+					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="" height="500" width="400" class="img1" title="мохіум">
 				</th>
 				<th>
-					<p class="textov">dsffj</p>
 				</th>			
 			</tr>
 			<tr>
 				<th>
-					<img src="KyltivatorDlaNasinia03.jpg" height="500" width="400" class="img1">
-					<img src="KyltivatorDlaNasinia04.jpg" height="500" width="400" class="img1">
-				</th>
-				<th>
-					<p class="textov"></p>
+					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="" height="500" width="400" class="img1" title="мохіум">
 				</th>
 			</tr>
 		</table>
