--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 		display: inline-block;
 		padding: 10px 30px 10px 1px;
 		margin-left: 20px;
+		margin-top: 10px;
 		border:4px solid rgba(130, 73, 245, 0.5);
 		background:linear-gradient( black 70%,rgba(130, 73, 245, 0.5)); ;
 	}
@@ -254,8 +255,7 @@
 <section>
 <br>
 <h2 class="text1" id="au">Про нас</h2>
-    <p class="text">Ми нова компанія, яка розвивається у багатьох напрямках. Тому чіткої категорії наших товарі у нас нема, але ми віримо, що ви зможете знайти у нас на сайті щось, що вас зацікавить. Оскільки ми тільки почали у нас не так багато досвіду, знань, товарів та послуг. Якщо у вас є ідеї, поради, чи питання звертайтеся на нашу пошту, телефон або наш тг, дякую.<br>
-    Наразі у нас доступна лише 1 послуга, зате не дорога, радимо замовити.</p>
+    <p class="text">Ми нова компанія, яка розвивається у багатьох напрямках. Тому чіткої категорії наших товарі у нас нема, але ми віримо, що ви зможете знайти у нас на сайті щось, що вас зацікавить. Оскільки ми тільки почали у нас не так багато досвіду, знань, товарів та послуг. Якщо у вас є ідеї, поради, чи запитання звертайтеся на нашу пошту, телефон або наш тг, дякую.<br></p>
         			
     <p class="text">Усі послуги та товари замовляйте через пошту, телефон, або телеграм !<br>
     				Більш детально про товари, а також зображення товарів у нашому телеграм !</p>
@@ -284,7 +284,7 @@
 									об'єм 120 мл<br>
 									система вентиляції<br>
 									живлення 3v</p>
-					<p class="text">Ціна: 40 грн.</p>
+					<p class="text">Ціна: 30 грн.</p>
 					<a href="tovar1.html"><p class="textz">дізнатись більше</p></a>
 			    </section>
 			</th>			
@@ -331,28 +331,42 @@
 		</tr>
 		<tr>
 			<th>
-				<section>					
+				<section class="tovary">					
+					<p class="text">Lasios Niger</p>
+					<p class="text">вид мурах</p>
+					<p class="text">Ціна: 35 грн.</p>
+					<a href="tovar6.html"><p class="textz">дізнатись більше</p></a>
+				</section>
+			</th>
+			<th>
+				<section class="tovary">					
+					<p class="text">Camponotus Vagus</p>
+					<p class="text">вид мурах</p>
+					<p class="text">Ціна: 100 грн.</p>
+					<a href="tovar7.html"><p class="textz">дізнатись більше</p></a>
+				</section>
+			</th>
+			<th>
+				<section class="tovary">					
+					<p class="text">Formica Rufa</p>
+					<p class="text">вид мурах</p>
+					<p class="text">Ціна: 100 грн.</p>
+					<a href="tovar8.html"><p class="textz">дізнатись більше</p></a>
 				</section>
 			</th>
 			<th>
 				<section>					
+					<p class="text"></p>
 				</section>
 			</th>
 			<th>
 				<section>					
-				</section>
-			</th>
-			<th>
-				<section>					
-				</section>
-			</th>
-			<th>
-				<section>					
+					<p class="text"></p>
 				</section>
 			</th>
 		</tr>
 	</table>
-
+	<p class="text">Напишіть, або подзвоніть нам, якщо у вас виникнуть питання щодо мурах.</p>
 </main>
 
 <h2 class="text1" id="mroboty">Мої роботи</h2>
