--- a/tovar6.html
+++ b/tovar6.html
@@ -28,28 +28,27 @@
 	</nav>
 </header>
 <main>
-	<h1 class="textov1">Батарейний блок 3V</h1>
+	<h1 class="textov1">Lasios Niger</h1>
 		<h2 class="text1">Опси:</h2>
-			<p class="text">За допомогою батарейного блоку ви зможете увімкнутии світолодіод у кльтиваторі, та ввімкнути багато інших наших майбутніх ідей.</p>
-			<p class="text">В наявності</p>	
-			<p class="text">Ціна: 23 грн.</p>
-		<h2 class="text1">Склад:</h2>
 			<p class="text">
-				Батарейний блок<br>
-				2 дроти<br></p>
+				Цей вид мурах живе у садах, а також його легко можна знайти у містах. Їсть він майже все, окрім насіння. Королева живе до 10 років.<br>
+			 	У них нема солдатів, тому треба давати їм менших таргаанів або мучних червʼяків.</p>
+			<p class="text">нема в наявності</p>	
+			<p class="text">Ціна: 35 грн.</p>
+		<h2 class="text1">Склад:</h2>
+			<p class="text">1 баночка</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
-				1.Вставте дві батарейки по 1.5V<br>
-				2.Підкулючіть блок до потрібного приладу<br>
+				1.Поставте у тінь, напівтінь<br>
+				2.НЕ відкривайте<br>
 				3.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="BatareinuiBlok.jpg" height="500" width="400" class="img1" title="батарейний блок">
-					<img src="BatareinuiBlok01.jpg" height="500" width="400" class="img1" title="батарейний блок">
+					<img src="LasiosNiger.jpg" height="500" width="550" class="img1" title="LasiosNiger-вид мурах">
 				</th>			
 			</tr>
 		</table>
-</main>
+</main>			
 </body>
 </html>
