--- a/tovar7.html
+++ b/tovar7.html
@@ -28,28 +28,28 @@
 	</nav>
 </header>
 <main>
-	<h1 class="textov1">Батарейний блок 3V</h1>
+	<h1 class="textov1">Camponotus Vagus</h1>
 		<h2 class="text1">Опси:</h2>
-			<p class="text">За допомогою батарейного блоку ви зможете увімкнутии світолодіод у кльтиваторі, та ввімкнути багато інших наших майбутніх ідей.</p>
-			<p class="text">В наявності</p>	
-			<p class="text">Ціна: 23 грн.</p>
-		<h2 class="text1">Склад:</h2>
 			<p class="text">
-				Батарейний блок<br>
-				2 дроти<br></p>
+				Цей вид мурах живе у лісах, та деревах, але рідко можна зустріти в місті. Це-хижий вид мурах, які їдять усе, окрім насіння.<br>
+				Також є 1 нюанс, що цей вид мурах як і майже всі види мурах у нашій країні лягає у сплячку.<br>
+				Також їм можна давати суху деревину яку вони можуть їсти, та використовувати у якості буд-матеріалів.</p>
+			<p class="text">нема в наявності</p>	
+			<p class="text">Ціна: 100 грн.</p>
+		<h2 class="text1">Склад:</h2>
+			<p class="text">1 баночка</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
-				1.Вставте дві батарейки по 1.5V<br>
-				2.Підкулючіть блок до потрібного приладу<br>
+				1.Поставте у тінь, напівтінь<br>
+				2.НЕ відкривайте<br>
 				3.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="BatareinuiBlok.jpg" height="500" width="400" class="img1" title="батарейний блок">
-					<img src="BatareinuiBlok01.jpg" height="500" width="400" class="img1" title="батарейний блок">
+					<img src="CamponotusVagus.jpg" height="500" width="700" class="img1" title="CamponotusVagus-вид мурах">
 				</th>			
 			</tr>
 		</table>
-</main>
+</main>			
 </body>
 </html>
