--- a/tovar8.html
+++ b/tovar8.html
@@ -28,28 +28,27 @@
 	</nav>
 </header>
 <main>
-	<h1 class="textov1">Батарейний блок 3V</h1>
+	<h1 class="textov1">Formica Rufa</h1>
 		<h2 class="text1">Опси:</h2>
-			<p class="text">За допомогою батарейного блоку ви зможете увімкнутии світолодіод у кльтиваторі, та ввімкнути багато інших наших майбутніх ідей.</p>
-			<p class="text">В наявності</p>	
-			<p class="text">Ціна: 23 грн.</p>
-		<h2 class="text1">Склад:</h2>
 			<p class="text">
-				Батарейний блок<br>
-				2 дроти<br></p>
+				Це вид мурах який живе у лісах. Має доволі красиве забарвлення. Їсть майже усе, окрім насіння.<br>
+				Є робочі живуть які живуть 2-3 роки, але нема солдат</p>
+			<p class="text">нема в наявності</p>	
+			<p class="text">Ціна: 100 грн.</p>
+		<h2 class="text1">Склад:</h2>
+			<p class="text">1 колба
+							</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
-				1.Вставте дві батарейки по 1.5V<br>
-				2.Підкулючіть блок до потрібного приладу<br>
+				1.Поставте у тінь, напівтінь<br>
+				2.НЕ відкривайте<br>
 				3.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="BatareinuiBlok.jpg" height="500" width="400" class="img1" title="батарейний блок">
-					<img src="BatareinuiBlok01.jpg" height="500" width="400" class="img1" title="батарейний блок">
-				</th>			
-			</tr>
+					<img src="FormicaRufa.jpg" height="500" width="600" class="img1" title="FormicaRufa-вид мурах">
+				</th>
 		</table>
-</main>
+</main>			
 </body>
 </html>
