--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		border-radius: 5px;
 		border:3px solid rgba(120, 63, 235,0.6); ;
 		color: white;
-		font-family: Bahnschrift Condensed;
+		font-family: "Bahnschrift Condensed";
         text-align: center;
         padding:3px 3px 3px 3px;
         margin-left: 50px;
@@ -72,7 +72,7 @@
 		border-radius: 10px;
 		width: 250px;
 		height: 100px;
-		font-family: Bahnschrift Condensed;
+		font-family: "Bahnschrift Condensed";
 		padding: 0px 35px;
 		text-align: center;
 		margin-top: 50px;
@@ -163,7 +163,7 @@
 	.text11, .text11 a{
 	    margin-top: 10px;
 	    padding-top: 10px;
-	    font-family: Bahnschrift Condensed;
+	    font-family: "Bahnschrift Condensed";
 	    font-size: 20px;
 		color: white;
 		background:black;
@@ -184,7 +184,7 @@
 		cursor: not-allowed;
 		margin-top: 10px;
 	    padding-top: 10px;
-	    font-family: Bahnschrift Condensed;
+	    font-family: "Bahnschrift Condensed";
 	    font-size: 20px;
 		color: white;
 		background:black;
