--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SporeIndustries.com</title>
-		<link rel="icon" href="Earth.png">
+		<link rel="icon" href="Earth.svg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="Spore.css">
 <style type="text/css">
@@ -302,7 +302,7 @@
 				<section class="tovary">
 			    	<p class="text">Мохіум</p>
 			    	<p class="text">форма кола<br>
-								    радіус ≈4см<br>
+								    діаметр ≈8см<br>
 									товщина ≈5мм</p>
 			    	<p class="text">Ціна: 15 грн.</p>
 			    	<a href="tovar3.html"><p class="textz">дізнатись більше</p></a> 
@@ -311,7 +311,8 @@
 			<th>
 				<section class="tovary">
 			    	<p class="text">Макро-світ</p>
-			    	<p class="text">форма: міні-баночка<br>
+			    	<p class="text">форма: куля<br>
+			    					діаметр: ≈3см<br>
 			    					культури: мох<br>
 			    				    колір: зелений</p>
 			    	<p class="text">Ціна: 15 грн.</p>
