--- a/tovar3.html
+++ b/tovar3.html
@@ -44,16 +44,16 @@
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="" height="500" width="400" class="img1" title="мохіум">
-					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="Mohiym.jpg" height="400" width="500" class="img1" title="мохіум">
+					<img src="Mohiym01.jpg" height="400" width="500" class="img1" title="мохіум">
 				</th>
 				<th>
 				</th>			
 			</tr>
 			<tr>
 				<th>
-					<img src="" height="500" width="400" class="img1" title="мохіум">
-					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="Mohiym02.jpg" height="400" width="500" class="img1" title="мохіум">
+					<img src="Mohiym03.jpg" height="400" width="500" class="img1" title="мохіум">
 				</th>
 			</tr>
 		</table>
