--- a/tovar4.html
+++ b/tovar4.html
@@ -34,7 +34,8 @@
 			<p class="text">нема в наявності</p>	
 			<p class="text">Ціна: 15 грн.</p>
 		<h2 class="text1">Склад:</h2>
-			<p class="text">1 баночка</p>
+			<p class="text">1 баночка<br>
+							Підставка</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
 				1.Поставте у тінь, напівтінь<br>
@@ -43,16 +44,16 @@
 		<table class="i1">
 			<tr>
 				<th>
-					<img src="" height="500" width="400" class="img1" title="мохіум">
-					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="MakroSvit.jpg" height="400" width="500" class="img1" title="макро-світ">
+					<img src="MakroSvit01.jpg" height="400" width="500" class="img1" title="макро-світ">
 				</th>
 				<th>
 				</th>			
 			</tr>
 			<tr>
 				<th>
-					<img src="" height="500" width="400" class="img1" title="мохіум">
-					<img src="" height="500" width="400" class="img1" title="мохіум">
+					<img src="MakroSvit02.jpg" height="400" width="500" class="img1" title="макро-світ">
+					<img src="MakroSvit03.jpg" height="400" width="500" class="img1" title="макро-світ">
 				</th>
 			</tr>
 		</table>
