--- a/tovar8.html
+++ b/tovar8.html
@@ -33,16 +33,23 @@
 			<p class="text">
 				Це вид мурах який живе у лісах. Має доволі красиве забарвлення. Їсть майже усе, окрім насіння.<br>
 				Є робочі живуть які живуть 2-3 роки, але нема солдат</p>
+			<p class="text">Поради:<br>
+							1.Годувати 1-2 рази на день<br>
+							2.Зволожувати формікарій раз на 2 дні<br>
+							3.Зателефонувати нам для безкоштовної консультація що до мурахам.</p>
 			<p class="text">нема в наявності</p>	
 			<p class="text">Ціна: 100 грн.</p>
 		<h2 class="text1">Склад:</h2>
-			<p class="text">1 колба
-							</p>
+			<p class="text">1 колба<br>
+							1 Королева мурах<br>
+							декілька робітників, та личинок</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
-				1.Поставте у тінь, напівтінь<br>
-				2.НЕ відкривайте<br>
-				3.Залиште гарний відгук</p>
+				1.Підготуйте формікаріум<br>
+				2.Дістаньте пробірку з мурахами<br>
+				3.Відкрийте пробірку, та покладіть її у формікаріум<br>
+				4.Зачекайте декілька днів<br>
+				5.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
