--- a/tovar6.html
+++ b/tovar6.html
@@ -33,15 +33,23 @@
 			<p class="text">
 				Цей вид мурах живе у садах, а також його легко можна знайти у містах. Їсть він майже все, окрім насіння. Королева живе до 10 років.<br>
 			 	У них нема солдатів, тому треба давати їм менших таргаанів або мучних червʼяків.</p>
+			<p class="text">Поради:<br>
+							1.Годувати 1-2 рази на день<br>
+							2.Зволожувати формікарій раз на 2 дні<br>
+							3.Зателефонувати нам для безкоштовної консультація що до мурахам.</p>
 			<p class="text">нема в наявності</p>	
 			<p class="text">Ціна: 35 грн.</p>
 		<h2 class="text1">Склад:</h2>
-			<p class="text">1 баночка</p>
+			<p class="text">1 колба<br>
+							1 Королева мурах<br>
+							декілька робітників, та личинок</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
-				1.Поставте у тінь, напівтінь<br>
-				2.НЕ відкривайте<br>
-				3.Залиште гарний відгук</p>
+				1.Підготуйте формікаріум<br>
+				2.Дістаньте пробірку з мурахами<br>
+				3.Відкрийте пробірку, та покладіть її у формікаріум<br>
+				4.Зачекайте декілька днів<br>
+				5.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
