--- a/tovar7.html
+++ b/tovar7.html
@@ -34,15 +34,23 @@
 				Цей вид мурах живе у лісах, та деревах, але рідко можна зустріти в місті. Це-хижий вид мурах, які їдять усе, окрім насіння.<br>
 				Також є 1 нюанс, що цей вид мурах як і майже всі види мурах у нашій країні лягає у сплячку.<br>
 				Також їм можна давати суху деревину яку вони можуть їсти, та використовувати у якості буд-матеріалів.</p>
+			<p class="text">Поради:<br>
+							1.Годувати 1-2 рази на день<br>
+							2.Зволожувати формікарій раз на 2 дні<br>
+							3.Зателефонувати нам для безкоштовної консультація що до мурахам.</p>
 			<p class="text">нема в наявності</p>	
 			<p class="text">Ціна: 100 грн.</p>
 		<h2 class="text1">Склад:</h2>
-			<p class="text">1 баночка</p>
+			<p class="text">1 колба<br>
+							1 Королева мурах<br>
+							декілька робітників, та личинок</p>
 		<h2 class="text1">Інструкція:</h2>
 			<p class="text">
-				1.Поставте у тінь, напівтінь<br>
-				2.НЕ відкривайте<br>
-				3.Залиште гарний відгук</p>
+				1.Підготуйте формікаріум<br>
+				2.Дістаньте пробірку з мурахами<br>
+				3.Відкрийте пробірку, та покладіть її у формікаріум<br>
+				4.Зачекайте декілька днів<br>
+				5.Залиште гарний відгук</p>
 		<table class="i1">
 			<tr>
 				<th>
